Bug 1544874 - Add missing baseline alignment for non-legacy ::marker boxes when aligning to a "block line".  r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D27960